<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment" >

    <ImageView
        android:id="@+id/iv_add_main_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="@+id/iv_star_main_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_star_main_fragment"
        android:contentDescription="@string/iv_add_main_fragment" />

    <ImageView
        android:id="@+id/iv_star_main_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@android:drawable/btn_star_big_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/iv_star_main_fragment" />

    <ImageView
        android:id="@+id/iv_logout_main_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:src="@android:drawable/ic_lock_power_off"
        app:layout_constraintBottom_toBottomOf="@+id/iv_star_main_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_star_main_fragment"
        android:contentDescription="@string/iv_logout_main_fragment" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="380dp"
        android:layout_height="550dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_star_main_fragment" >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_main_fragment"
            android:layout_width="380dp"
            android:layout_height="550dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_star_main_fragment" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swipeRefreshLayout">

        <RadioButton
            android:id="@+id/rb_all_main_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_all_main_fragment"
            app:layout_constraintStart_toEndOf="@+id/radioButton"
            app:layout_constraintTop_toBottomOf="@+id/rv_main_fragment" />

        <RadioButton
            android:id="@+id/rb_sport_main_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_sport_main_fragment"
            app:layout_constraintStart_toEndOf="@+id/radioButton1"
            app:layout_constraintTop_toBottomOf="@+id/rv_main_fragment" />

        <RadioButton
            android:id="@+id/rb_manga_main_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_manga_main_fragment"
            app:layout_constraintStart_toEndOf="@+id/radioButton2"
            app:layout_constraintTop_toBottomOf="@+id/rv_main_fragment" />

        <RadioButton
            android:id="@+id/rb_diverse_main_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_diverse_main_fragment"
            app:layout_constraintStart_toEndOf="@+id/radioButton3"
            app:layout_constraintTop_toBottomOf="@+id/rv_main_fragment" />


    </RadioGroup>

    <ProgressBar
        android:id="@+id/progressBar_main_fragment"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>