<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment" >

    <TextView
        android:id="@+id/tv_titlePage_login_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/tv_titlePage_login_fragment"
        android:textColor="#0099CC"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_login_login_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:autofillHints="login"
        android:backgroundTint="#B6B6B6"
        android:ems="10"
        android:hint="@string/et_login_login_fragment"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="#0099CC"
        android:textColorHint="#0099CC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titlePage_login_fragment" />

    <EditText
        android:id="@+id/et_password_login_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints="password"
        android:backgroundTint="#B6B6B6"
        android:ems="10"
        android:hint="@string/et_password_login_fragment"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#0099CC"
        android:textColorHint="#0099CC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_login_login_fragment" />

    <Button
        android:id="@+id/btn_submit_login_fragment"
        style="@style/CustomMaterialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:background="@drawable/button_background"
        android:paddingStart="46dp"
        android:paddingEnd="46dp"
        android:text="@string/btn_submit_login_fragment"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password_login_fragment" />

    <TextView
        android:id="@+id/tv_register_login_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tv_register_login_fragment"
        android:textColor="#0099CC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_submit_login_fragment" />
</androidx.constraintlayout.widget.ConstraintLayout>