<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.editArticle.EditArticleFragment">


    <TextView
        android:id="@+id/tv_titlePage_edit_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/tv_titlePage_edit_fragment"
        android:textColor="#0099CC"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_title_edit_fragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="title"
        android:backgroundTint="#B6B6B6"
        android:ems="10"
        android:inputType="text"
        android:textColorHint="#0099CC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titlePage_edit_fragment"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/et_content_edit_fragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="content"
        android:backgroundTint="#B6B6B6"
        android:inputType="textMultiLine"
        android:minHeight="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_title_edit_fragment"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/et_url_edit_fragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="url"
        android:backgroundTint="#B6B6B6"
        android:ems="10"
        android:hint="@string/et_url_edit_fragment"
        android:inputType="text"
        android:textColorHint="#0099CC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_content_edit_fragment"
        tools:ignore="TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize" />


    <ImageView
        android:id="@+id/iv_edit_fragment"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/feedarticles_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_url_edit_fragment"
        android:contentDescription="@string/iv_edit_fragment" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_edit_fragment">

        <RadioButton
            android:id="@+id/rb_sport_edit_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_sport_edit_fragment"
            app:layout_constraintStart_toEndOf="@+id/radioButton8"/>

        <RadioButton
            android:id="@+id/rb_manga_edit_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_manga_edit_fragment"
            app:layout_constraintStart_toEndOf="@+id/radioButton9"/>

        <RadioButton
            android:id="@+id/rb_diverse_edit_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_diverse_edit_fragment"
            app:layout_constraintStart_toEndOf="@+id/radioButton10"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_delete_edit_fragment"
        style="@style/CustomMaterialButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/btn_delete_edit_fragment"
        app:layout_constraintEnd_toStartOf="@id/btn_submit_edit_fragment"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btn_submit_edit_fragment"
        style="@style/CustomMaterialButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/btn_submit_edit_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_delete_edit_fragment"
        app:layout_constraintTop_toTopOf="@id/btn_delete_edit_fragment"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>